# operation-systems-course

./: CMakeLists.txt  Find.c  JITCompiler.c  Main.c  Makefile  Print.c  Term.c  Terminal.c
asm/: 16Byte.cpp  16ByteAligned.cpp  1Byte.cpp  8Byte.cpp  WordCount.cpp
hw1/: Term.c
hw2/: Find.c
hw3/: JITCompiler.c
hw4/: Main.c
hw5/: Server.c
hw6/: Client.c  Server.c
hw8/: Handler.c  Makefile
